actually fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,4 +5,10 @@ html, body {
 
 * {
   overflow: visible !important;
+  padding: 0;
+  margin: 0;
+}
+
+html, body, #__next {
+  overflow-x: hidden !important;
 }
